--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -34,8 +34,8 @@
     width: 100%;
     height: auto;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0px 5px 5px rgb(60, 84, 160);
     img{
       max-width: 320px;
