--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -149,6 +149,16 @@
   border: none;
 }
 
+.make-order form .order-form-step1 .info {
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  color: #3c54a0;
+  margin-bottom: -5px;
+  margin-top: 10px;
+  opacity: 0.7;
+}
+
 .make-order form .order-form-step1 .form-tag-num_pages {
   font-size: 15px;
   color: #3c54a0;
@@ -159,7 +169,7 @@
   padding: 0 2px;
   position: absolute;
   left: 15px;
-  top: 434px;
+  top: 475px;
   z-index: 1;
 }
 
