--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -32,7 +32,7 @@
                 <a onclick="prices()">Priser</a>
                 <a href="/om-webiser">Om oss</a>
                 <a onclick="info()">Prosess</a>
-                <a href="/hosting-informasjon">Hosting</a>
+                <a onclick="hosting()">Hosting</a>
                 <a onclick="contact()">Kontakt oss</a>
             </li>   
         </ul>
