--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -393,6 +393,110 @@ html, body {
   font-family: 'Sniglet', cursive;
 }
 
+.hosting {
+  background: white;
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.hosting.active .icon {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.hosting h1.heading {
+  width: 100%;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #142c78;
+  font-weight: 700;
+  font-size: 26px;
+}
+
+.hosting p {
+  font-size: 18px;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
+}
+
+.hosting .icon {
+  margin-bottom: 50px;
+  width: 45%;
+  height: auto;
+  padding: 5px;
+  display: inline-table;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: all ease-in .5s;
+  transition: all ease-in .5s;
+  -webkit-transform: translateY(40px);
+          transform: translateY(40px);
+}
+
+.hosting .icon i {
+  margin: 30px;
+  margin-bottom: -15px;
+  padding: 20px;
+  color: black;
+  font-size: 50px;
+  border-radius: 8px;
+  color: #3c54a0;
+  -webkit-box-shadow: 2px 2px 2px #3c54a0;
+          box-shadow: 2px 2px 2px #3c54a0;
+}
+
+.hosting .icon h1 {
+  font-family: 'Sniglet', cursive;
+  font-size: 16px;
+  color: black;
+  padding: 5px;
+  margin-bottom: 7px;
+  margin-top: 25px;
+}
+
+.hosting .icon p {
+  display: none;
+  font-size: 14px;
+  opacity: 0.9;
+}
+
+.hosting .icon button {
+  margin-top: 10px;
+  border-radius: 4px;
+  color: #1e1e1e;
+  width: 100px;
+  font-size: 15px;
+  padding: 5px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  color: white;
+  outline: none;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
+          box-shadow: 1.5px 3px 2px #3c54a0;
+  border: 2px solid transparent;
+}
+
+.hosting .icon button.active {
+  background: white;
+  color: black;
+  border-color: black;
+}
+
+.hosting .border {
+  background: #646464;
+  height: 2px;
+  width: 65%;
+  margin: 20px auto;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+}
+
 .contact-us {
   background: white;
   width: 100%;
