--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -18,6 +18,44 @@
   }
 }
 
+#backToTop {
+  position: fixed;
+  right: 0;
+  top: 70vh;
+  z-index: 1000;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  outline: none;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
+          box-shadow: 1.5px 3px 2px #3c54a0;
+  border: 2px solid transparent;
+  opacity: 0;
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+#backToTop.active {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+#backToTop:active {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  -webkit-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
+}
+
+#backToTop i {
+  font-size: 18px;
+  color: white;
+  padding: 15px;
+  -webkit-transform: rotate(-44deg);
+          transform: rotate(-44deg);
+}
+
 .cover-desktop {
   display: none;
 }
