--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -44,7 +44,7 @@
            <h1 class="heading">Steg 1</h1>
            <label for="products" class="form-tag-products tag">Velg nettside</label>
            <br>
-           {{form.products}}
+           <input type="text" name="products" class="products input" id="products">
            <br>
            <br>
            <label for="hosting" class="form-tag-hosting tag">Vil du ha våres hosting tjeneste?</label>
