--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -49,7 +49,7 @@
            <br>
            <label for="hosting" class="form-tag-hosting tag">Vil du ha våres hosting tjeneste?</label>
            <br>
-           {{form.hosting}}
+           <input type="text" name="hosting" class="hosting input" id="hosting" placeholder="Ja/Nei">
            <br>
            <br>
            <label for="image" class="form-tag-image tag">Har du allerede en logo?</label>
