--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -90,7 +90,7 @@
            </div>
          </div>
         <div class="form-actions">
-            <button onclick="orderLoading()" name="order" value="order" type='submit'>Send</button>
+            <button onclick="orderLoading()" name="order" value="order" type='submit'>Send bestillingen</button>
         </div>
     </form>
 </div>
