--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -127,6 +127,54 @@ $loader: rgb(80, 104, 180);
               margin-bottom: -5px;
               margin-top: 10px;
               opacity: 0.7;
+              pointer-events: none;
+              &.if-custom{
+                display: block;
+                position: absolute;
+                background: white;
+                width: 100%;
+                height: 100vh;
+                z-index: 100;
+                opacity: 0;
+                padding-top: 10px;
+                transform: translateY(40px);
+                transition: all .3s ease-in-out;
+                &.active{
+                  opacity: 1;
+                }
+              }
+            }
+            .loader {
+              background-color: white;
+              overflow: hidden;
+              width: 100%;
+              height: 100%;
+              display: flex;
+              align-items: center;
+              align-content: center; 
+              justify-content: flex-start;  
+              pointer-events: none;
+            }
+            
+            .loader__element {
+              transform: translateY(-320px);
+              height: 5px;
+              width: 100%;
+              background: rgb(60, 84, 160);
+              display: none;
+            }
+
+            .loader__element:before {
+              content: '';
+              display: block;
+              background-color: white;
+              height: 30px;
+              width: 0;
+              animation: getWidth 4s ease-in infinite;
+            }
+            
+            @keyframes getWidth {
+              100% { width: 100%; }
             }
             .form-tag-num_pages{
               font-size: 15px;
@@ -138,6 +186,106 @@ $loader: rgb(80, 104, 180);
               left: 15px;
               top: 475px;
               z-index: 1;
+            }
+            .product-price{
+              position: absolute;
+              right: 40px;
+              transform: translateY(-32px);
+              font-size: 14px;
+              color: rgb(60, 84, 160);
+              opacity: 0.7;
+            }
+            .hosting-price{
+              position: absolute;
+              right: 40px;
+              transform: translateY(-32px);
+              font-size: 14px;
+              color: rgb(60, 84, 160);
+              opacity: 0.7;
+            }
+            .products-dropdown{
+              position: absolute;
+              width: 100%;
+              height: 100vh;
+              background: white;
+              z-index: 1000;
+              text-align: center;
+              padding: 20px;
+              opacity: 0;
+              transition: all .3s ease-in-out;
+              pointer-events: none;
+              transform: translateY(-30px);
+              &.active{
+                opacity: 1;
+                pointer-events: visible;
+                transform: translateY(0);
+              }
+              .dropdown-border{
+                border: 2px solid rgb(60, 84, 160);
+                padding: 10px;
+                border-radius: 4px;
+                h1{
+                  font-size: 17px;
+                  padding: 3px;
+                  background: rgba(240, 240, 240, 0.6);
+                }
+                .flex{
+                  display: flex;
+                  width: 100%;
+                  h1{
+                    width: 50%;
+                    border: 2px solid white;
+                  }
+                }
+              }
+            }
+            .hosting-dropdown{
+              position: absolute;
+              width: 100%;
+              height: 100vh;
+              background: white;
+              z-index: 1000;
+              text-align: center;
+              padding: 20px;
+              opacity: 0;
+              transition: all .3s ease-in-out;
+              pointer-events: none;
+              transform: translateY(-30px);
+              &.active{
+                opacity: 1;
+                pointer-events: visible;
+                transform: translateY(0);
+              }
+              .dropdown-border{
+                border: 2px solid rgb(60, 84, 160);
+                padding: 10px;
+                border-radius: 4px;
+                h1{
+                  font-size: 17px;
+                  padding: 3px;
+                  background: rgba(240, 240, 240, 0.6);
+                }
+                .flex{
+                  display: flex;
+                  width: 100%;
+                  h1{
+                    width: 50%;
+                    border: 2px solid white;
+                  }
+                }
+              }
+            }
+            .arrow-down{
+              position: absolute;
+              right: 2px;
+              background: rgb(60, 84, 160);
+              padding: 7px;
+              transform: translateY(-39px);
+              border-radius: 0;
+              i{
+                font-size: 20px;
+                color: white;
+              }
             }
             .input{
               width: 100%;
@@ -158,6 +306,21 @@ $loader: rgb(80, 104, 180);
             }
           }
           .order-form-step2{
+            position: relative;
+            padding-top: 20px;
+            h1{
+              &.heading{
+                width: 100%;
+                text-transform: uppercase;
+                font-family: 'Sniglet', cursive;
+                color: rgb(20, 44, 120);
+                font-weight: 700;
+                font-size: 26px;
+                text-align: center;
+              }
+          }
+        }  
+          .order-form-step3{
             position: relative;
             padding-top: 20px;
             .google-recaptcha{
