--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -150,6 +150,18 @@
                    </div>
                 </div>
              </div>
+             <div class="num-pages-extra-pages">
+                <input type="text" class="input num-pages-extra" value="Side 1:" id="page1">
+                <input type="text" class="input num-pages-extra" value="Side 2:" id="page2">
+                <input type="text" class="input num-pages-extra" value="Side 3:" id="page3">
+                <input type="text" class="input num-pages-extra" value="Side 4:" id="page4">
+                <input type="text" class="input num-pages-extra" value="Side 5:" id="page5">
+                <input type="text" class="input num-pages-extra" value="Side 6:" id="page6">
+                <input type="text" class="input num-pages-extra" value="Side 7:" id="page7">
+                <input type="text" class="input num-pages-extra" value="Side 8:" id="page8">
+                <input type="text" class="input num-pages-extra" value="Side 9:" id="page9">
+                <input type="text" class="input num-pages-extra" value="Side 10:" id="page10">
+            </div>
          </div>
         <br>
         <div class="order-form-step2">
